@@ -21,6 +21,9 @@ import org.apache.lucene.document.Field;
 import org.apache.lucene.index.IndexableField;
 import org.apache.lucene.util.LuceneTestCase;
 import org.apache.solr.util.DateMathParser;
+
+import org.junit.Ignore;
+
 import java.util.Date;
 import java.util.TimeZone;
 import java.util.Locale;
@@ -58,7 +61,7 @@ public class DateFieldTest extends LuceneTestCase {
     assertToI("1995-12-31T23:59:59",     "1995-12-31T23:59:59.000Z");
     assertToI("1995-12-31T23:59:59",     "1995-12-31T23:59:59.00Z");
     assertToI("1995-12-31T23:59:59",     "1995-12-31T23:59:59.0Z");
-    
+
     // kind of kludgy, but we have other tests for the actual date math
     assertToI(f.toInternal(p.parseMath("/DAY")), "NOW/DAY");
 
@@ -100,20 +103,106 @@ public class DateFieldTest extends LuceneTestCase {
   
   // as of Solr1.3
   public void testToObject() throws Exception {
+
+    // just after epoch
+    assertToObject(  5L, "1970-01-01T00:00:00.005Z");
+    assertToObject(  0L, "1970-01-01T00:00:00Z");
+    assertToObject(370L, "1970-01-01T00:00:00.37Z");
+    assertToObject(900L, "1970-01-01T00:00:00.9Z");
+
+    // well after epoch
     assertToObject(820454399987l, "1995-12-31T23:59:59.987666Z");
     assertToObject(820454399987l, "1995-12-31T23:59:59.987Z");
     assertToObject(820454399980l, "1995-12-31T23:59:59.98Z");
     assertToObject(820454399900l, "1995-12-31T23:59:59.9Z");
     assertToObject(820454399000l, "1995-12-31T23:59:59Z");
+
+    // waaaay after epoch
+    assertToObject(327434918399005L, "12345-12-31T23:59:59.005Z");
+    assertToObject(327434918399000L, "12345-12-31T23:59:59Z");
+    assertToObject(327434918399370L, "12345-12-31T23:59:59.37Z");
+    assertToObject(327434918399900L, "12345-12-31T23:59:59.9Z");
+
+    // well before epoch
+    assertToObject(-52700112001000L, "0299-12-31T23:59:59Z");
+    assertToObject(-52700112000877L, "0299-12-31T23:59:59.123Z");
+    assertToObject(-52700112000910L, "0299-12-31T23:59:59.09Z");
+
+    // flexible in parsing years less then 4 digits
+    assertToObject(-52700112001000L,  "299-12-31T23:59:59Z");
+
   }
   
   public void testFormatter() {
-    assertEquals("1970-01-01T00:00:00.005", f.formatDate(new Date(5)));
-    assertEquals("1970-01-01T00:00:00",     f.formatDate(new Date(0)));
-    assertEquals("1970-01-01T00:00:00.37",  f.formatDate(new Date(370)));
-    assertEquals("1970-01-01T00:00:00.9",   f.formatDate(new Date(900)));
+    // just after epoch
+    assertFormat("1970-01-01T00:00:00.005", 5L);
+    assertFormat("1970-01-01T00:00:00",     0L);
+    assertFormat("1970-01-01T00:00:00.37",  370L);
+    assertFormat("1970-01-01T00:00:00.9",   900L);
+
+    // well after epoch
+    assertFormat("1999-12-31T23:59:59.005", 946684799005L);
+    assertFormat("1999-12-31T23:59:59",     946684799000L);
+    assertFormat("1999-12-31T23:59:59.37",  946684799370L);
+    assertFormat("1999-12-31T23:59:59.9",   946684799900L);
+
+    // waaaay after epoch
+    assertFormat("12345-12-31T23:59:59.005", 327434918399005L);
+    assertFormat("12345-12-31T23:59:59",     327434918399000L);
+    assertFormat("12345-12-31T23:59:59.37",  327434918399370L);
+    assertFormat("12345-12-31T23:59:59.9",   327434918399900L);
+
+    // well before epoch
+    assertFormat("0299-12-31T23:59:59",     -52700112001000L);
+    assertFormat("0299-12-31T23:59:59.123", -52700112000877L);
+    assertFormat("0299-12-31T23:59:59.09",  -52700112000910L);
 
   }
+
+  /** 
+   * Using dates in the canonical format, verify that parsing+formating 
+   * is an identify function
+   */
+  public void testRoundTrip() throws Exception {
+
+    // typical dates, various precision
+    assertRoundTrip("1995-12-31T23:59:59.987Z");
+    assertRoundTrip("1995-12-31T23:59:59.98Z");
+    assertRoundTrip("1995-12-31T23:59:59.9Z");
+    assertRoundTrip("1995-12-31T23:59:59Z");
+    assertRoundTrip("1976-03-06T03:06:00Z");
+
+    // dates with atypical years
+    assertRoundTrip("0001-01-01T01:01:01Z");
+    assertRoundTrip("12021-12-01T03:03:03Z");
+  }
+
+  @Ignore("SOLR-2773: Non-Positive years don't work")
+  public void testRoundTripNonPositiveYear() throws Exception {
+
+    // :TODO: ambiguity about year zero
+    // assertRoundTrip("0000-04-04T04:04:04Z");
+    
+    // dates with negative years
+    assertRoundTrip("-0005-05-05T05:05:05Z");
+    assertRoundTrip("-2021-12-01T04:04:04Z");
+    assertRoundTrip("-12021-12-01T02:02:02Z");
+    
+    // :TODO: assertFormat and assertToObject some negative years
+
+  }
+
+  protected void assertFormat(final String expected, final long millis) {
+    assertEquals(expected, f.formatDate(new Date(millis)));
+  }
+
+  protected void assertRoundTrip(String canonicalDate) throws Exception {
+    Date d = DateField.parseDate(canonicalDate);
+    String result = DateField.formatDate(d) + "Z";
+    assertEquals("d:" + d.getTime(), canonicalDate, result);
+
+  }
+
 
   public void testCreateField() {
     int props = FieldProperties.INDEXED ^ FieldProperties.STORED;
